--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,8 @@
 hello:
     path: /hello
     controller: App\Controller\WorkshopPhp::hello
+
+product:
+    path: /product
+    controller: App\Controller\ProductController::createProduct
+
