--- a/.env
+++ b/.env
@@ -24,6 +24,5 @@ APP_SECRET=5c319a6b3b98589736a1b5f3755224e8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="mysql://root:@gen-mysql148994-all-dev.mwp-lannister.e5.c.emag.network:13543/workshop?serverVersion=5.7"
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
